# pixootop

./: Cargo.toml  README.md  demo.cast
pixootop-client/: Cargo.toml  pixootop.service
pixootop-client/src/: main.rs
pixootop-server/: Cargo.toml  Cross.toml  pixootop.service
pixootop-server/src/: fonts.rs  index.html  main.rs  render.rs
src/: average.rs  main.rs  render.rs
