[package]
name = "pixootop-client"
version.workspace = true
edition.workspace = true

[dependencies]
amdgpu-sysfs = "0.18.1"
anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
graceful = "0.1.1"
libpulse-binding = "2.30.1"
log.workspace = true
pulsectl-rs = "0.3.2"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde.workspace = true
sysinfo = "0.35.1"
